# vidyut-pada-snapshot

./: Cargo.toml  Makefile  README.md  compare.sh  err.txt
data/: dhatupatha.tsv  subset.tsv
src/: abhyasasya.rs  ac_sandhi.rs  angasya.rs  ardhadhatuka.rs  args.rs  arguments.rs  ashtadhyayi.rs  asiddhavat.rs  atidesha.rs  atmanepada.rs  char_view.rs  constants.rs  dhatu_gana.rs  dhatu_karya.rs  dhatupatha.rs  dvitva.rs  filters.rs  guna_vrddhi.rs  it_agama.rs  it_samjna.rs  la_karya.rs  lib.rs  operations.rs  operators.rs  prakriya.rs  pratipadika_karya.rs  samjna.rs  samprasarana.rs  sanadi.rs  sounds.rs  stem_gana.rs  sup_adesha.rs  sup_karya.rs  tag.rs  term.rs  term_views.rs  tin_pratyaya.rs  tripadi.rs  utils.rs  vikarana.rs
src/angasya/: asiddhavat.rs  mod.rs
src/args/: tin.rs
tests/: sarvadhatuka.rs  test_krdantas.rs
