[package]
name = "vidyut-prakriya"
version = "0.1.0"
authors = ["Arun Prasad <ambuda.library@gmail.com>"]
description = "A lightning-fast Sanskrit word generator"
homepage = "https://github.com/ambuda-org/vidyut-prakriya"
repository = "https://github.com/ambuda-org/vidyut-prakriya"
categories = ["text-processing"]
keywords = ["sanskrit"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
compact_str = "0.6.1"
csv = "1.1.6"
enumset = "1.0.12"
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
rustc-hash = "1.1.0"
